resources/style.css
a {
	text-decoration: none;
	display: inline-block;
	margin: 2px;
}

a:hover {
	text-decoration: underline;
}

.node {
	color: dodgerblue;
}

.token {
	color: green;
}

.trivia {
	color: crimson;
	white-space: pre;
}

.none {
	color: dimgray;
}

ul {
	padding-left: 1.5em;
	list-style-image: none;
	list-style-type: none;
	border-left: 1px dashed rgba(100, 100, 100, 0.3);
}

pre {
	margin: 0;
}

.missing {
	color: red;
}

.implicit {
	color: dimgray;
}

.selected {
	background-color: rgba(255, 255, 0, 0.15);
	border-color: rgba(255, 255, 0, 0.15);
	border-style: solid;
	border-width: 1px;
}

